fix update attendance

--- a/src/app/components/attendance-edit/attendance-edit.component.html
+++ b/src/app/components/attendance-edit/attendance-edit.component.html
@@ -27,6 +27,6 @@
     <button pButton pRipple icon="pi pi-times" class="p-button-text button-size"
             (click)="hideDialog()" translate>{{"Cancel"}}</button>
     <button [disabled]="form.invalid" pButton pRipple icon="pi pi-check" class="p-button-text button-size"
-            (click)="saveAttendance()" translate>{{"Save"}}</button>
+            (click)="canRegistered()" translate>{{"Save"}}</button>
   </ng-template>
 </p-dialog>
