add register limitation

--- a/src/app/components/attendances/attendances.component.html
+++ b/src/app/components/attendances/attendances.component.html
@@ -19,4 +19,4 @@
              (delete)="deleteAttendance($event)"></app-day>
   </div>
 </div>
-<app-attendance-edit (error)="addError($event)"></app-attendance-edit>
+<app-attendance-edit></app-attendance-edit>
